# SelectZyme-app

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  sz.service  sz.sh
.github/workflows/: docker-publish.yml  python-app.yml
data/blast_psi/: X_red.npz  df.parquet  hdbscan_structures.npz
data/demo/: df.parquet  x_red_mst_slc.npz
data/petase/: X_red.npz  hdbscan_structures.npz  x_red_mst_slc.npz
index/: index.html
nginx/: default.conf  index.html
