[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

# todo: check if submodules of external/ get excluded when adding submodules before accidentally
[tool.setuptools]
package-dir = {"" = "."}
py-modules = ["app"]

[project]
name = "selectzyme-demo-app"
version = "0.1.0"
description = "A minimal demo application for selectzyme"
readme = "README.md"
authors = [{ name = "fmoorhof", email = "fmoorhof@ipb-halle.de" }]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.10"
dependencies = [
    "dash==3.0.2",
    "dash-bootstrap-components==2.0.0",
    "plotly==6.0.1",
    "pandas==2.2.3",
    "ydata_profiling==4.16.1"
]