[project]
name = "selectzyme-app"
version = "0.0.3"
description = "A minimal demo application for selectzyme"
readme = "README.md"
authors = [{ name = "fmoorhof", email = "fmoorhof@ipb-halle.de" }]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">= 3.10"

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "." }
py-modules = ["app"]


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "FA",  # flake8-future-annotations
]
ignore = [
    "N806", "N803",  # lower case variables, arguments
    "E402",  # E402 Module level import not at top of file
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
required-imports = ["from __future__ import annotations"]